# rusty-llm-app

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml
api/: Cargo.toml
api/src/handler/: llm.rs  ping.rs
api/src/model/: llm.rs  ping.rs
api/src/route/: llm.rs  mod.rs  ping.rs
app/: Cargo.toml  Dockerfile  Makefile.toml  compose.yml
app/adapter/: Cargo.toml
app/adapter/src/gateway/: llm.rs
app/api/: Cargo.toml
app/api/src/handler/: llm.rs  ping.rs
app/api/src/model/: llm.rs  mod.rs  ping.rs
app/api/src/route/: llm.rs  ping.rs
app/kernel/: Cargo.toml
app/kernel/src/gateway/: llm.rs
app/registry/: Cargo.toml
app/registry/src/: lib.rs
app/shared/: Cargo.toml
app/shared/src/: config.rs
ops/cases/cloudrun_with_lb/: main.tf  variables.tf
ops/modules/artifact_registry/: main.tf  variable.tf
ops/modules/cloud_run/: main.tf  outputs.tf  variables.tf
ops/modules/load_balancer/: main.tf  variables.tf
ops/modules/network/: main.tf  outputs.tf
src/: main.rs
src/routes/: ping.rs
