[package]
name = "rusty-llm-app"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/silasolla/rusty-llm-app"
license = "MIT"
publish = false

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [ "adapter","api", "kernel", "registry", "shared"]

[workspace.dependencies]
api = { path = "./api" }
shared = { path = "./shared" }
registry = { path = "./registry" }
kernel = { path = "./kernel" }
adapter = { path = "./adapter" }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
rstest = "0.25.0"
async-trait = "0.1.88"
derive-new = "0.7.0"

[dependencies]
api.workspace = true
shared.workspace = true
registry.workspace = true
adapter.workspace = true
kernel.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
reqwest.workspace = true
async-trait.workspace = true
derive-new.workspace = true

[dev-dependencies]
rstest.workspace = true
